# file-searcher-bot

./: Cargo.toml
src/: main.rs  search_command.rs
