[package]
name = "file_searcher_bot"
version = "0.1.0"
authors = ["arduino_explorer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.0-rc.0"
hyper = "0.13"
hyper-tls="0.4.3"
tokio = { version = "0.2", features = ["full"]}
